--- a/Web_253501_Homets/Web_253501_Homets.csproj
+++ b/Web_253501_Homets/Web_253501_Homets.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Web_253501_Homets.Domain\Web_253501_Homets.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
