--- a/Web_253501_Homets/Web_253501_Homets.csproj
+++ b/Web_253501_Homets/Web_253501_Homets.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,10 +8,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Web_253501_Homets.Domain\Web_253501_Homets.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
